--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+
 }
 
 body {
@@ -16,7 +14,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   background: #ffffff;
+   margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
 }
+.header {
+   width: 100%;
+  overflow-x: hidden;
+}
+
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
